tests/functional/lang/eval-fail/assert-equal-type.err.exp
error:
       … while evaluating the condition of the assertion '(false == null)'
         at /pwd/lang/eval-fail/assert-equal-type.nix:1:1:
            1| assert false == null;
             | ^
            2| abort "unreachable"

       error: a Boolean of value 'false' is not equal to null of value 'null'
